Update copyright (added 2008)

--- a/README
+++ b/README
@@ -8,7 +8,7 @@ for display by Freemind. It was written out of annoyance with the Freemind user
 interface, and the lack of 'merging' capabilities when collaborating with other
 people.
 
-Copyright  2006--2007  Wouter Bolsterlee <uws@xs4all.nl>
+Copyright  2006–2008  Wouter Bolsterlee <uws@xs4all.nl>
 
 This program is distributed under the GPL v2 (or later) license.
 
